--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,138 @@
-body {
-  background-color: #FFFFFF; }
-  body span {
-    text: center; }
-  body header {
-    height: 50px;
+* {
+  box-sizing: border-box; }
+
+html {
+  height: 100%;
+  padding: 0;
+  margin: 0; }
+  html body {
     background-color: #FFFFFF;
-    border-bottom-style: solid;
-    border-color: #000000; }
+    height: 100%;
+    background-size: cover;
+    /*button {
+    background-image
+   }*/ }
+    html body .content {
+      height: 100%; }
+      html body .content .second_block {
+        height: 100%;
+        grid-row: span 3;
+        grid-column: span 3; }
+    @media (min-width: 1024px) {
+      html body {
+        background-color: #000000; }
+        html body .content {
+          height: 100%;
+          display: grid;
+          grid-auto-flow: dense;
+          grid-template-columns: repeat(4, 1fr);
+          grid-template-rows: repeat(1, 1fr);
+          grid-gap: 0px; }
+          html body .content_block {
+            height: 100%;
+            text-align: center;
+            grid-column-end: span 4;
+            grid-row: span 2; }
+          html body .content .second_block {
+            background-color: #FFFFFF;
+            grid-column: span 2;
+            display: grid;
+            grid-auto-flow: dense;
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            grid-gap: 0px; }
+            html body .content .second_block_row {
+              width: 100%;
+              text-align: center; } }
+    @media (max-width: 1023px) {
+      html body .second_block {
+        background-color: #FFFFFF;
+        grid-column: span 2;
+        display: grid;
+        grid-auto-flow: dense;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-gap: 0px; }
+        html body .second_block_row {
+          width: 100%;
+          text-align: center; } }
+    html body .header {
+      border-bottom-style: inset;
+      border-bottom-color: #D3D3D3;
+      border-bottom-width: 1px; }
+    html body #first_row .div1 {
+      text-align: center; }
+    html body .div1 {
+      font-size: 11px;
+      font-size: 1.1rem;
+      border-color: rgba(0, 0, 0, 0.1);
+      text-align: center; }
+    html body .div2 {
+      display: block;
+      /* margin: 0 auto;*/
+      margin-left: auto;
+      margin-right: auto; }
+    html body .div3 {
+      font-size: 11px;
+      font-size: 1.1rem;
+      text-align: center;
+      font-family: 'Handlee', cursive; }
+    html body h3 {
+      font-family: 'Indie Flower', cursive; }
+    html body h2 {
+      font-family: 'Joti One', cursive; }
+    html body .youtubeVideos img {
+      width: 100%;
+      height: 100%;
+      padding-bottom: 5%;
+      /*background: transparent;
+    object-fit: cover;*/ }
+    html body .youtubeVideos button {
+      margin: 0;
+      padding: 0;
+      border: none;
+      display: inline-block;
+      width: 180px; }
+    html body .youtubeVideos ul {
+      margin: 0;
+      padding: 0; }
+    html body .youtubeVideos li {
+      display: inline;
+      padding: 10px 10px; }
+    html body #third_row {
+      background: #00BFFF;
+      text-align: center;
+      /*display: flex;*/
+      /*flex-direction: column;*/
+      /*justify-content: center;*/
+      /*color: #000000;*/ }
+    html body .contacts ul {
+      padding: 3px; }
+    html body .contact {
+      display: inline;
+      width: 25%;
+      min-width: 340px;
+      text-align: left;
+      padding-left: 6%; }
+    html body .contact a {
+      text-decoration: none;
+      color: #000000;
+      font-size: 18px; }
+    html body .contact a:hover {
+      color: #ADFF2F;
+      font-weight: 700; }
+    html body .contact a:hover i {
+      color: #FF0000; }
+    html body .contact i {
+      display: inline-block;
+      list-style: none;
+      font-size: 20px;
+      width: 60px;
+      height: 60px;
+      margin: 0.5%;
+      border: 0;
+      border-radius: 4px;
+      line-height: 60px; }
+    html body .contact i:hover {
+      color: #FF0000;
+      /*background: rgba(0, 0, 0, 0.25);*/ }
