--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,17 +1,258 @@
 $control-height: 50px;
 $color: #FFFFFF;
+$base-font-size: 10px;
+$height: 100%;
+$width: 100%;
+$tablet-width: 768px;
+$desktop-width: 1024px;
+
+
+
+
+ @mixin grid($columns, $rows){
+   display: grid;
+   grid-auto-flow: dense;
+   grid-template-columns: repeat($columns,1fr);
+   grid-template-rows: repeat($rows,1fr);
+   grid-gap: 0px;
+
+ }
+
+@mixin desktop {
+  @media (min-width: #{$desktop-width}) {
+    
+    @content;
+  }
+
+}
+
+@mixin tablet {
+  @media  (max-width: #{$desktop-width - 1px}) {
+    @content;
+  }
+}
+
+
+
+
+@mixin font-size($size) { 
+  @if unitless($size) {
+    $size: $size * 1px;
+  }
+  font-size: $size;
+  font-size: ($size / $base-font-size) * 1rem;
+ }
+
+ @function black($opacity) { 
+    @return rgba(0, 0, 0, $opacity);
+ }
+
+@mixin center-block() { 
+    display: block;
+   /* margin: 0 auto;*/
+    margin-left: auto;
+    margin-right: auto;
+
+
+ }
+
+
+* {
+  box-sizing: border-box;
+}
+
+
+html{
+    height: $height;
+    padding: 0;
+    margin: 0;
 
 body {
-	background-color: $color;
-	
-	span {
-	text: center;
-	}
-	header{
-		height: $control-height;
-		background-color: $color;
-		border-bottom-style: solid;
-		border-color: #000000;
-	}
+  background-color: $color;
+  height: $height;
+  background-size: cover;
+
+    .content{
+      height: $height;
+      
+      .second_block{
+        height: $height;
+        grid-row: span 3;
+        grid-column: span 3;
+
+      }
+    }
+  
+@include desktop {
+      background-color: #000000;
+    .content{
+
+      height: $height;
+      @include grid(4,1);
+
+       &_block{
+        height: $height;
+        text-align: center;
+        grid-column-end: span 4;
+        grid-row: span 2;
+
+       }
+
+       .second_block{
+       background-color: $color;
+       grid-column: span 2;
+       @include grid(1,3);
+           &_row{
+            width: $width;
+            text-align: center;
+
+           }
+       
+         }
+
+      }
+};
+
+@include tablet{
+         .second_block{
+       background-color: $color;
+       grid-column: span 2;
+       @include grid(1,3);
+           &_row{
+            width: $width;
+            text-align: center;
+
+           }
+       
+       }
+}
+
+   .header{
+    border-bottom-style:inset;
+    border-bottom-color: #D3D3D3;
+    border-bottom-width: 1px;
+   }
+
+
+    #first_row .div1{
+      text-align: center;
+    }
+
+   .div1{
+    @include font-size(11px);
+    border-color:black(0.1);
+    text-align: center;
+   }
+   .div2{
+    @include center-block;
+   
+
+   }
+   .div3{
+    @include font-size(11px);
+    text-align: center;
+    font-family: 'Handlee', cursive;
+     }
+   
+
+   h3{
+     
+     font-family: 'Indie Flower', cursive;
+   }
+
+   h2{
+    font-family: 'Joti One', cursive;
+   }
+  
+   .youtubeVideos img{
+    width: 100%;
+    height: 100%;
+    padding-bottom: 5%;
+    
+    background: transparent;
+    object-fit: cover;
+   }
+
+   .youtubeVideos button{
+    margin: 0;
+    padding: 0;
+    border:none;
+    display: inline-block;
+    width: 180px;
+    
+   }
+  
+
+
+   .youtubeVideos ul{
+         margin: 0;
+         padding: 0;
+   }
+   .youtubeVideos li{
+         display: inline;
+         padding: 10px 10px;
+   }
+
+   #third_row {
+    background: #00BFFF;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #000000;
+}
+
+
+
+.contacts ul {
+
+    
+    padding: 3px;
+}
+.contact {
+    display: inline;
+    width: 25%;
+    min-width: 340px;
+    text-align: left;
+    padding-left: 6%;
+}
+
+.contact a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 18px;
+}
+
+.contact a:hover {
+    color: #ADFF2F;
+    font-weight: 700;
+    
+}
+
+.contact a:hover i {
+    color: #FF0000;
+}
+
+.contact i {
+    display: inline-block;
+    list-style: none;
+    font-size: 20px;
+    width: 60px;
+    height: 60px;
+    margin: 0.5%;
+    border: 0;
+    border-radius: 4px;
+    line-height: 60px;
+    
+}
+
+
+.contact i:hover {
+    color: #FF0000;
+    /*background: rgba(0, 0, 0, 0.25);*/
+}
+
+
+}
 }
 
