--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,10 +8,7 @@ html {
   html body {
     background-color: #FFFFFF;
     height: 100%;
-    background-size: cover;
-    /*button {
-    background-image
-   }*/ }
+    background-size: cover; }
     html body .content {
       height: 100%; }
       html body .content .second_block {
@@ -85,8 +82,8 @@ html {
       width: 100%;
       height: 100%;
       padding-bottom: 5%;
-      /*background: transparent;
-    object-fit: cover;*/ }
+      background: transparent;
+      object-fit: cover; }
     html body .youtubeVideos button {
       margin: 0;
       padding: 0;
@@ -102,10 +99,10 @@ html {
     html body #third_row {
       background: #00BFFF;
       text-align: center;
-      /*display: flex;*/
-      /*flex-direction: column;*/
-      /*justify-content: center;*/
-      /*color: #000000;*/ }
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #000000; }
     html body .contacts ul {
       padding: 3px; }
     html body .contact {
