--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,10 @@ html {
   html body {
     background-color: #FFFFFF;
     height: 100%;
-    background-size: cover; }
+    background-size: cover;
+    /*#first_row .div1{
+  text-align: center;
+}*/ }
     html body .content {
       height: 100%; }
       html body .content .second_block {
@@ -57,8 +60,6 @@ html {
       border-bottom-style: inset;
       border-bottom-color: #D3D3D3;
       border-bottom-width: 1px; }
-    html body #first_row .div1 {
-      text-align: center; }
     html body .div1 {
       font-size: 11px;
       font-size: 1.1rem;
@@ -81,15 +82,17 @@ html {
     html body .youtubeVideos img {
       width: 100%;
       height: 100%;
-      padding-bottom: 5%;
-      background: transparent;
-      object-fit: cover; }
+      padding-bottom: 5%; }
     html body .youtubeVideos button {
       margin: 0;
       padding: 0;
       border: none;
       display: inline-block;
       width: 180px; }
+    html body #div4 {
+      margin: 0 auto;
+      overflow: hidden;
+      background-color: #FFFFFF; }
     html body .youtubeVideos ul {
       margin: 0;
       padding: 0; }
@@ -131,5 +134,4 @@ html {
       border-radius: 4px;
       line-height: 60px; }
     html body .contact i:hover {
-      color: #FF0000;
-      /*background: rgba(0, 0, 0, 0.25);*/ }
+      color: #FF0000; }
